--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,17 @@
 version: 0.2
+env:
+  variables:
+    SECRET: "your_secret_value"
+    DB_HOST: "localhost:27017"
+    DB_USER: ""
+    DB_PASS: ""
+    DB_NAME: "yum-food"
+    DB_EXTENSION: "+srv://"
+    NODE_ENV: "development"
+    API_KEY: ""
+    CLOUDINARY_CLOUD_NAME: ""
+    CLOUDINARY_API_KEY: ""
+    CLOUDINARY_API_SECRET: ""
 phases:
   install:
     runtime-versions:
